--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,12 @@
+[tool.poetry]
+name = "CloverTeam"
+version = "0.1.0"
+description = ""
+authors = ["AmmarKefi"]
+license = "MIT"
+
 [tool.poetry.dependencies]
 python = "^3.11"
-flask = "^2.3.2"
+flask = "^2.0"
+
+[tool.poetry.dev-dependencies]
